[gd_scene load_steps=4 format=3 uid="uid://dy8fyk5jra6k8"]

[ext_resource type="PackedScene" uid="uid://dv872npqj6t43" path="res://Scenes/Title.tscn" id="1_7ivgv"]
[ext_resource type="Script" path="res://Scripts/RootScene.gd" id="1_r0ne1"]
[ext_resource type="PackedScene" uid="uid://deula55xlbthr" path="res://Scenes/PlayerSetup.tscn" id="3_l7g61"]

[node name="RootScene" type="Node"]
script = ExtResource("1_r0ne1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" parent="UI" instance=ExtResource("1_7ivgv")]
layout_mode = 1

[node name="PlayerSetup" parent="UI" instance=ExtResource("3_l7g61")]
visible = false
layout_mode = 1

[connection signal="on_exit_btn_pressed" from="UI/Title" to="." method="_on_title_on_exit_btn_pressed"]
[connection signal="on_start_game_btn_pressed" from="UI/Title" to="." method="_on_title_on_start_game_btn_pressed"]
[connection signal="on_btn_back_pressed" from="UI/PlayerSetup" to="." method="_on_player_setup_on_btn_back_pressed"]
[connection signal="on_btn_next_pressed" from="UI/PlayerSetup" to="." method="_on_player_setup_on_btn_next_pressed"]
